--- a/src/app/ui/forms/register-form/register-form.component.html
+++ b/src/app/ui/forms/register-form/register-form.component.html
@@ -1,1 +1,12 @@
-<p>register-form works!</p>
+
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
+  <app-title title="Login"></app-title>
+
+  <app-label name="username">
+    <app-input type="text" placeholder="Yuna" formControlName="username"></app-input>
+  </app-label>
+  <app-label name="Password">
+    <app-input type="password" placeholder="*********" formControlName="password"></app-input>
+  </app-label>
+  <app-button label="Login" type="submit"></app-button>
+  </form>
