--- a/src/app/containers/login-container/login-container.component.html
+++ b/src/app/containers/login-container/login-container.component.html
@@ -1,3 +1,3 @@
 
 
-<app-login-form (formValue)="getFormData($event)"></app-login-form>
+<app-login-form (loginValue)="getFormData($event)"></app-login-form>
