Add: api models and url complete

--- a/src/app/ui/elements/linked-logo/linked-logo.component.html
+++ b/src/app/ui/elements/linked-logo/linked-logo.component.html
@@ -1,3 +1,3 @@
 
 
-<a href="{{linkedLogo.link}}"><img src="{{linkedLogo.path}}" alt="{{linkedLogo.alt}}"></a>
+<a href="{{linkedLogo.link}}" target="_blank"><img src="{{linkedLogo.path}}" alt="{{linkedLogo.alt}}"></a>
