--- a/src/app/ui/layouts/home-layout/home-layout.component.html
+++ b/src/app/ui/layouts/home-layout/home-layout.component.html
@@ -1,6 +1,7 @@
-
+<app-header-container></app-header-container>
 <section>
   <section>
     <router-outlet name="home-page"/>
   </section>
 </section>
+<app-footer-container></app-footer-container>
