--- a/src/app/ui/blocks/footer/footer.component.html
+++ b/src/app/ui/blocks/footer/footer.component.html
@@ -1,15 +1,15 @@
 
 <footer>
   <div class="container">
-    <app-paragraph>Armando Sanmartin</app-paragraph>
-    <app-paragraph>Thanks for reading!</app-paragraph>
+    <app-paragraph [paragraph]="'Armando Sanmartin'"></app-paragraph>
+    <app-paragraph [paragraph]="'Thanks for reading!'">Thanks for reading!</app-paragraph>
   </div>
   <div class="container">
     <ul>
       @for (item of linkedLogo; track $index) {
-        <li><app-linked-logo></app-linked-logo></li>
+        <li><app-linked-logo [linkedLogo]="item"></app-linked-logo></li>
       }
     </ul>
   </div>
-  <app-paragraph>Copyright © 2024 Armando Sanmartin All rights reserved.</app-paragraph>
+  <app-paragraph [paragraph]="'Copyright © 2024 Armando Sanmartin All rights reserved.'">Copyright © 2024 Armando Sanmartin All rights reserved.</app-paragraph>
 </footer>
