--- a/src/app/ui/blocks/home/home.component.html
+++ b/src/app/ui/blocks/home/home.component.html
@@ -1,5 +1,5 @@
 
-<app-title>What are you looking to do today?</app-title>
+<app-title [title]="'What are you looking to do today?'"></app-title>
 <section>
   <app-navigation [items]="navigationElements"></app-navigation>
 </section>
