Add: type to the states

--- a/src/app/ui/forms/login-form/login-form.component.html
+++ b/src/app/ui/forms/login-form/login-form.component.html
@@ -1,5 +1,5 @@
 
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
+<form [formGroup]="form" (ngSubmit)="onSubmit($event)">
 <app-title title="Login"></app-title>
 
 <app-label name="username">
