--- a/src/app/ui/blocks/product/product.component.html
+++ b/src/app/ui/blocks/product/product.component.html
@@ -6,6 +6,7 @@
   <app-title title="There are no books here!. please create one :D"></app-title>
 }@else {
   <section>
+    <p>{{renderProduct.product.price}}</p>
     <h3>{{renderProduct.product.name}}</h3>
 
     <img src="{{renderProduct.img}}" alt="{{renderProduct.alt}}"/>
