Add: shopping cart state and shopping cart add/delete item

--- a/src/app/containers/manager-list-container/manager-list-container.component.html
+++ b/src/app/containers/manager-list-container/manager-list-container.component.html
@@ -1,2 +1,2 @@
 
-<app-manager [products]="products$ | async" ></app-manager>
+<app-manager [products]="products$ | async"  (captureProduct)="shoppingCar($event)"></app-manager>
