--- a/src/app/ui/forms/login-form/login-form.component.html
+++ b/src/app/ui/forms/login-form/login-form.component.html
@@ -8,5 +8,5 @@
 <app-label name="Password">
   <app-input type="password" placeholder="*********" formControlName="password"></app-input>
 </app-label>
-<app-button label="Login" type="submit"></app-button>
+<button type="submit">Login</button>
 </form>
