--- a/src/app/ui/layouts/manager-layout/manager-layout.component.html
+++ b/src/app/ui/layouts/manager-layout/manager-layout.component.html
@@ -4,5 +4,6 @@
   <section>
     <router-outlet name="book-info"></router-outlet>
   </section>
+  <section><router-outlet name="shopping-cart"></router-outlet></section>
 </section>
 <app-footer-container></app-footer-container>
