Add: rendering backend result into the cart page

--- a/src/app/containers/shopping-manager-container/shopping-manager-container.component.html
+++ b/src/app/containers/shopping-manager-container/shopping-manager-container.component.html
@@ -1,2 +1,2 @@
 
-<app-shopping-cart [products]="cartProduts$ | async" (captureProduct)="captureWishList($event)"></app-shopping-cart>
+<app-shopping-cart [products]="cartProduts$ | async" (captureProduct)="captureWishList($event)" [managerProductResponse]="managerResponseProduct$ | async"></app-shopping-cart>
