--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+@import './normalize.css';
+
+
+input {
+  outline: none;
+  border: none;
+}
+
+button, input {
+  overflow: visible;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+*
+, ::after, ::before {
+  box-sizing: inherit;
+}
+
+
+body, html {
+
+  height: 100%;
+  font-family: Popins-Regular, sans-serif;
+}
+
+body {
+  margin: 0;
+  
+}
