--- a/src/app/ui/forms/buy-product/buy-product.component.html
+++ b/src/app/ui/forms/buy-product/buy-product.component.html
@@ -19,5 +19,5 @@
       <option value="1">Novel</option>
     </select>
   </app-label>
-  <app-button label="Buy" type="submit"></app-button>
+  <button label="Buy" type="submit">Buy</button>
 </form>
