--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 @import './normalize.css';
 
 
-input {
+/* input {
   outline: none;
   border: none;
 }
@@ -30,5 +30,5 @@ body, html {
 
 body {
   margin: 0;
-  
-}
+
+} */
