feat: footer, if you read this its 4am and im tired asf

--- a/src/app/ui/blocks/budget-card/budget-card.component.html
+++ b/src/app/ui/blocks/budget-card/budget-card.component.html
@@ -7,6 +7,7 @@
   }@else {
     <ul>
       @for (product of products; track product.id) {
+        <app-list><img src="{{product.photo.url}}" alt="{{product.photo.alt}}"></app-list>
         <app-list item="{{product.name}}"></app-list>
         <app-list><app-paragraph [paragraph]="'Price: '"></app-paragraph></app-list>
         <app-list item="{{product.price}}"></app-list>
