--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 @import './normalize.css';
 
 
-/* input {
+input {
   outline: none;
   border: none;
 }
@@ -31,4 +31,4 @@ body, html {
 body {
   margin: 0;
 
-} */
+}
