--- a/src/app/containers/header-container/header-container.component.html
+++ b/src/app/containers/header-container/header-container.component.html
@@ -1,3 +1,3 @@
 
 
-<app-header [linkedButton]="linkedButton"></app-header>
+<app-header [linkedButton]="linkedButton" (linkedButtonValue)="handleLinkedButtonValue($event)"></app-header>
