--- a/src/app/ui/blocks/budget-product-list/budget-product-list.component.html
+++ b/src/app/ui/blocks/budget-product-list/budget-product-list.component.html
@@ -6,6 +6,7 @@
   }@else {
     <ul>
       @for (product of products; track $index) {
+        <app-list><img src="{{product.photo.url}}" alt="{{product.photo.alt}}"></app-list>
         <app-list item="{{product.name}}"></app-list>
         <app-list item="{{product.price}}"></app-list>
         <app-list item="{{product.stock}}"></app-list>
