--- a/src/app/ui/forms/register-form/register-form.component.css
+++ b/src/app/ui/forms/register-form/register-form.component.css
@@ -1,7 +1,108 @@
 
-.form {
-  height: 100%vh;
+.auth {
+width: 390px;
+background: #ffff;
+overflow: hidden;
+padding: 77px 55px 33px;
+box-shadow: 0 5px 10px 0 rgba(0, 0,0, .1);
+}
+
+.form__paragraph {
   display: flex;
-  justify-content: center;
+  justify-content: end;
   align-items: center;
+  margin-top: 1rem;
+}
+
+.form__title {
+  display: block;
+  font-family: Popins;
+  font-size: 26px;
+  color: #333;
+  line-height: 1.2;
+  text-align: center;
+  padding-bottom: 26px;
+}
+
+.container__button {
+  display: block;
+  margin: auto;
+  font-family: 'Poppins-Medium', sans-serif;
+  font-size: 16px;
+  color: #fff;
+  line-height: 1.2;
+  text-transform: uppercase;
+  padding: 15px 30px;
+  background-color: #081044;
+  border-radius: 25px;
+  outline: none;
+  cursor: pointer;
+  transition: all .4s;
+}
+
+.container_button--disabled:disabled {
+  display: block;
+  margin-top: 2rem;
+  margin-bottom: 1.5rem;
+  font-family: 'Poppins-Medium', sans-serif;
+  font-size: 16px;
+  color: #fff;
+  line-height: 1.2;
+  text-transform: uppercase;
+  padding: 15px 30px;
+  background-color: #292a2b;
+  border-radius: 25px;
+  outline: none;
+  cursor: not-allowed;
+  transition: all .4s;
+}
+
+.container__button:hover {
+  background-color: #4b54d1;
+}
+
+.container__input {
+  font-family: Popins-Regular;
+  font-size: 15px;
+  color: #555;
+  line-height: 1.2;
+  display: block;
+  width: 100%;
+  height: 45px;
+  background: 0, 0;
+  margin-bottom: 50px;
+}
+
+.container__span {
+  position: relative;
+  display: block;
+  bottom: 10px;
+  left: 0;
+  pointer-events: none;
+  margin-bottom: 20px;
+}
+
+.container__span::before {
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 0;
+  height: 2px;
+  background: #6a7dfe;
+}
+
+.container__span::before {
+  font-family: Popins-Regular;
+  font-size: 15px;
+  color: #999;
+  line-height: 1.2;
+  content: '';
+  display: block;
+  width: 100%;
+  position: absolute;
+  top: 2px;
+  left: 0;
+  padding-left: 5px;
 }
