--- a/src/app/ui/layouts/home-layout/home-layout.component.html
+++ b/src/app/ui/layouts/home-layout/home-layout.component.html
@@ -1,7 +1,9 @@
-<app-header-container></app-header-container>
+<div class="container">
+  <app-header-container></app-header-container>
 <section>
   <section>
     <router-outlet name="home-page"/>
   </section>
 </section>
 <app-footer-container></app-footer-container>
+</div>
