feat: buy product form complete

--- a/src/app/ui/blocks/home/home.component.html
+++ b/src/app/ui/blocks/home/home.component.html
@@ -1,5 +1,5 @@
 
-<app-title [title]="'What are you looking to do today?'"></app-title>
-<section>
-  <app-navigation [items]="navigationElements"></app-navigation>
+<app-title [title]="'¿What are you looking to do today?'"></app-title>
+<section class="main">
+  <app-navigation [items]="navigationElements" class="main_navigation"></app-navigation>
 </section>
