--- a/src/app/ui/layouts/home-layout/home-layout.component.html
+++ b/src/app/ui/layouts/home-layout/home-layout.component.html
@@ -1,9 +1,7 @@
-<div class="container">
-  <app-header-container></app-header-container>
-<section>
+<app-header-container></app-header-container>
+<section class="main">
   <section>
     <router-outlet name="home-page"/>
   </section>
 </section>
 <app-footer-container></app-footer-container>
-</div>
