--- a/src/app/ui/elements/linked-button/linked-button.component.html
+++ b/src/app/ui/elements/linked-button/linked-button.component.html
@@ -1,4 +1,4 @@
 
-<a routerLink="{{item.link}}">
-  <button>{{item.label}}</button>
+<a routerLink="{{item.link}}" class="but">
+  <button class="main__button">{{item.label}}</button>
 </a>
