--- a/src/app/ui/layouts/home-layout/home-layout.component.css
+++ b/src/app/ui/layouts/home-layout/home-layout.component.css
@@ -1,3 +1,7 @@
-.container{
-
+.main{
+  height: calc(100vh - 216px);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
