--- a/src/app/ui/forms/buy-product/buy-product.component.html
+++ b/src/app/ui/forms/buy-product/buy-product.component.html
@@ -18,7 +18,7 @@
       <option value="1">Novel</option>
     </select>
   @if(form.valid){
-    <button type="submit" class="form__button">Login</button>
+    <button type="submit" class="form__button">Purchase</button>
   }@else{
     <button type="submit" class="form__button " [disabled]="!form.valid">Purchase</button>
   }
