--- a/src/app/ui/blocks/header/header.component.css
+++ b/src/app/ui/blocks/header/header.component.css
@@ -11,6 +11,7 @@
   transition: opacity .2s ease-in-out;
   background-color: white;
   box-shadow: rgba(0, 0, 0, .05) 0 3px 15px;
+  z-index: 1000;
 }
 
 .header__container {
