--- a/src/app/ui/blocks/product/product.component.css
+++ b/src/app/ui/blocks/product/product.component.css
@@ -8,3 +8,23 @@
 }
 
 
+.section__card {
+  width: 190px;
+  height: 254px;
+  padding: .8em;
+  background: #f5f5f5;
+  position: relative;
+  overflow: visible;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+.section__img {
+  background-color: #ffcaa6;
+  height: 40%;
+  width: 100%;
+  border-radius: .5rem;
+  transition: .3s ease;
+}
+
+.section__h3, .section__p{
+  padding-top: 10%;
+}
