--- a/src/app/ui/blocks/shopping-cart/shopping-cart.component.html
+++ b/src/app/ui/blocks/shopping-cart/shopping-cart.component.html
@@ -5,29 +5,34 @@
   <h1>You have your cart empty! Let's add some items!</h1>
   <app-linked-button [item]="redirect"></app-linked-button>
   }@else {
-    <ul>
+    <ul class="main__ul">
       @for (product of products; track product.id) {
-        <app-list><img src="{{product.photo.url}}" alt="{{product.photo.alt}}"></app-list>
-        <app-list item="{{product.name}}"></app-list>
-        <app-list><app-paragraph [paragraph]="'Price: '"></app-paragraph></app-list>
-        <app-list item="{{updateItemPrice(getCartItemAmount(product) ,product.price.toString())}}"></app-list>
-        <label>{{ getCartItemAmount(product) }}</label>
-        <button (click)="increaseAmount(product)">+1</button>
-        <button [disabled]="deteleDisableButton(product)" (click)="decreaseAmount(product)">-1</button>
+        <div class="main__container">
+          <img src="{{product.photo.url}}" alt="{{product.photo.alt}}" class="main__img">
+          <h3 class="main__h3">{{product.name}}</h3>
+          <app-paragraph class="main__p" paragraph="${{product.price}}"></app-paragraph>
+          <app-paragraph class="main__p">amount: {{product.stock}}</app-paragraph>
+          <button (click)="increaseAmount(product)" class="main__button">+1</button>
+          <button [disabled]="deteleDisableButton(product)" (click)="decreaseAmount(product)" class="main__button">-1</button>
+        </div>
       }
     </ul>
-    <button (click)="emitCartItems()">Comprar!</button>
+    <button (click)="emitCartItems()" class="main__button">Comprar!</button>
   }
 
   <br>
 
   @if(managerProductResponse != null ){
-    @for (result of managerProductResponse.products; track $index) {
-      <app-list item="{{result.name}}"></app-list>
-      <app-list item="{{result.price}}"></app-list>
-      <app-list item="{{result.type}}"></app-list>
-      <app-list item="{{managerProductResponse.totalAmount}}"></app-list>
-      <app-list item="{{managerProductResponse.totalWithDiscount}}"></app-list>
-    }
+    <ul class="main__ul">
+      @for (result of managerProductResponse.products; track $index) {
+      <div class="main__container main__container--no-img">
+          <app-paragraph paragraph="{{result.name}}" class="main__p"></app-paragraph>
+          <app-paragraph paragraph="{{result.price}}" class="main__p"></app-paragraph>
+          <app-paragraph paragraph="{{result.type}}" class="main__p"></app-paragraph>
+        </div>
+      }
+      <app-list item="totalAmount: {{managerProductResponse.totalAmount}}"></app-list>
+      <app-list item="totalWithDiscount: {{managerProductResponse.totalWithDiscount}}"></app-list>
+    </ul>
   }
 </main>
